--- a/SleepMonitor/resources/layouts/layout.xml
+++ b/SleepMonitor/resources/layouts/layout.xml
@@ -1,3 +1,13 @@
+<!--
+Name: resources/layouts/layout.xml
+Description: Defines the visual layout structure for the SleepMonitor watch app.
+             Specifies UI components, positioning, and layout elements used
+             by SleepMonitorView.
+Authors: Kiara Rose
+Created: February 7, 2026
+Last Modified: February 7, 2026
+-->
+
 <layout id="MainLayout" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://developer.garmin.com/downloads/connect-iq/resources.xsd">
     <label x="center" y="5" text="@Strings.prompt" color="Graphics.COLOR_WHITE" justification="Graphics.TEXT_JUSTIFY_CENTER" />
     <bitmap id="id_monkey" x="center" y="30" filename="../drawables/monkey.png" />
